--- a/Apple.html
+++ b/Apple.html
@@ -36,7 +36,7 @@
 
 			       <!-- Lägg till den svarta rutan med id "blackOverlay" -->
 			       <div id="grönaRutanHem">
-				       <a href="Index.html">
+				       <a href="index.html">
 					       <p id="hemText">HEM</p>
 				       </a>
 			</div>
