--- a/HittaHit.html
+++ b/HittaHit.html
@@ -30,7 +30,7 @@
 			</nav>
 		
 			<div id="grönaRutanHem">
-				<a href="Index.html">
+				<a href="index.html">
 					<p id="hemText">HEM</p>
 				</a>
 			</div>
