--- a/OmOss.html
+++ b/OmOss.html
@@ -32,7 +32,7 @@
 				
 	
        				<div id="grönaRutanHem">
-	       				<a href="Index.html">
+	       				<a href="index.html">
 		       				<p id="hemText">HEM</p>
 	       				</a>
 				</div>
